# nemoslides

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  PLAN.md  PROGRESS.md  README.md  mkdocs.yml  pyproject.toml  railway.toml
.github/workflows/: docs.yml  pages.yml
assets/renderer/: build.sh  render.sh  style.css
blindtest/: app.py  build_pairs.py  pair_queue.json  votes.csv  votes.db
data/: image_bank.json  sample_seeds.json  seeds.json  seeds_smoke_theme.json  seeds_smoke_theme_no_eloc.json  theme_profiles.json
data/hf/: slides-sft-v0.test.jsonl
data/seeds.d/: batch_0000.json  batch_0001.json  batch_0002.json  batch_0004.json  batch_0006.json  batch_0007.json  batch_0008.json  batch_0009.json  batch_0011.json  batch_0012.json  batch_0013.json  batch_0014.json  batch_0015.json  batch_0016.json  batch_0017.json  batch_0018.json  batch_0019.json  batch_0021.json  batch_0022.json  batch_0024.json  batch_0025.json  batch_0026.json  batch_0027.json  batch_0028.json  batch_0030.json  batch_0031.json  batch_0033.json  batch_0034.json  batch_0035.json  (+9 more)
docs/: 01-overview.md  01-problem.md  02-data-pipeline.md  02-data.md  03-training.md  04-evaluation.md  05-results.md  index.md  reproduce.md
eval/: compare.py  comparison.json  comparison_table.md  generate.py  glm-5.1_results.json  judge.py  nemotron-nano_results.json  rubric.py  run.py
pipeline/: clients.py  image_resolver.py  qualitative_check.py  seeds.py
pitch/: .gitignore  SCRIPT.en.md  SCRIPT.ko.md  global-bottom.vue  package.json  pnpm-lock.yaml  slides.md  style.css  uno.config.ts
renderer/: .tmp-deck-49009-N-XXXXXX.md  .tmp-deck-49100-N-XXXXXX.md  .tmp-deck-49874-N-XXXXXX.md  .tmp-deck-49901-N-XXXXXX.md  .tmp-deck-50007-N-XXXXXX.md  .tmp-deck-50858-N-XXXXXX.md  .tmp-deck-52361-N-XXXXXX.md  .tmp-deck-52638-N-XXXXXX.md  .tmp-deck-53294-N-XXXXXX.md  .tmp-deck-53325-N-XXXXXX.md  .tmp-deck-54637-N-XXXXXX.md  .tmp-deck-54988-N-XXXXXX.md  .tmp-deck-55309-N-XXXXXX.md  .tmp-deck-56320-N-XXXXXX.md  .tmp-deck-57042-N-XXXXXX.md  .tmp-deck-69976-N-XXXXXX.md  .tmp-deck-70330-N-XXXXXX.md  .tmp-deck-70606-N-XXXXXX.md  .tmp-deck-70778-N-XXXXXX.md  .tmp-deck-70798-N-XXXXXX.md  .tmp-deck-71486-N-XXXXXX.md  .tmp-deck-84078-N-XXXXXX.md  .tmp-seed00000-XXXXXX.md  .tmp-seed00000-batchcheck.md  .tmp-seed00000-render.md  .tmp-seed00001-render.md  .tmp-seed00002-render.md  .tmp-seed00003-render.md  .tmp-seed00004-render.md  .tmp-seed00005-render.md  package-lock.json  package.json  render.sh
scripts/: codex_pipeline.py  demo_smoke.mjs  push_hf_dataset.py  render_theme_gallery.sh  run_codex_batch.sh  watch_codex_status.sh
tests/: test_codex_pipeline.py  test_demo_prompting.py  test_theme_profiles.py
(+87 files in other folders)
